[package]

name = "common"
version = "0.1.0"
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Patrick Tran <patrick.tran06@gmail.com>",
    "Michael Reinhard <mcreinhard@gmail.com>",
    "Tony Stark"]

[[lib]]

name = "common"
path = "src/lib.rs"

[dependencies.iron]

git = "https://github.com/iron/iron.git"

[dependencies.urlencoded]

git = "https://github.com/iron/urlencoded.git"

[dependencies.logger]

git = "https://github.com/iron/logger.git"

[dependencies.router]

git = "https://github.com/iron/router.git"

[dependencies.mount]

git = "https://github.com/iron/mount.git"

[dependencies.persistent]

git = "https://github.com/iron/persistent.git"

[dependencies.static]

git = "https://github.com/iron/static.git"

[dependencies.session]

git = "https://github.com/iron/session.git"

[dependencies.cookie]

git = "https://github.com/iron/cookie.git"

[dependencies.bodyparser]

git = "https://github.com/iron/body-parser.git"

