[package]

name = "common"
version = "0.1.0"
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Patrick Tran <patrick.tran06@gmail.com>",
    "Michael Reinhard <mcreinhard@gmail.com>",
    "Tony Stark"]

[dependencies]
iron = "*"
urlencoded = "*"
logger = "*"
router = "*"
mount = "*"
persistent = "*"
staticfile = "*"
session = "*"
cookie = "*"
bodyparser = "*"
